--- a/OS X/nibs/settings.xib
+++ b/OS X/nibs/settings.xib
@@ -41,9 +41,35 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<array class="NSMutableArray" key="NSSubviews">
+					<object class="NSButton" id="626705464">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">289</int>
+						<string key="NSFrame">{{458, 18}, {43, 25}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSButtonCell" key="NSCell" id="467315624">
+							<int key="NSCellFlags">-2080244224</int>
+							<int key="NSCellFlags2">134217728</int>
+							<string key="NSContents">Back</string>
+							<object class="NSFont" key="NSSupport" id="391880496">
+								<string key="NSName">LucidaGrande</string>
+								<double key="NSSize">13</double>
+								<int key="NSfFlags">1044</int>
+							</object>
+							<reference key="NSControlView" ref="626705464"/>
+							<int key="NSButtonFlags">-2038152961</int>
+							<int key="NSButtonFlags2">163</int>
+							<string key="NSAlternateContents"/>
+							<string key="NSKeyEquivalent"/>
+							<int key="NSPeriodicDelay">400</int>
+							<int key="NSPeriodicInterval">75</int>
+						</object>
+					</object>
 					<object class="NSBox" id="506001647">
 						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">12</int>
+						<int key="NSvFlags">45</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="NSView" id="164144974">
 								<reference key="NSNextResponder" ref="506001647"/>
@@ -103,11 +129,7 @@
 																	<int key="NSCellFlags">337772096</int>
 																	<int key="NSCellFlags2">2048</int>
 																	<string key="NSContents">Text Cell</string>
-																	<object class="NSFont" key="NSSupport" id="391880496">
-																		<string key="NSName">LucidaGrande</string>
-																		<double key="NSSize">13</double>
-																		<int key="NSfFlags">1044</int>
-																	</object>
+																	<reference key="NSSupport" ref="391880496"/>
 																	<reference key="NSControlView" ref="142312858"/>
 																	<object class="NSColor" key="NSBackgroundColor" id="708863652">
 																		<int key="NSColorSpace">6</int>
@@ -400,7 +422,7 @@
 											<string key="NSContents"/>
 											<reference key="NSSupport" ref="391880496"/>
 											<reference key="NSControlView" ref="966235589"/>
-											<int key="NSButtonFlags">-2033434369</int>
+											<int key="NSButtonFlags">-2030288641</int>
 											<int key="NSButtonFlags2">162</int>
 											<object class="NSCustomResource" key="NSNormalImage">
 												<string key="NSClassName">NSImage</string>
@@ -418,7 +440,7 @@
 										<string key="NSFrame">{{274, 41}, {193, 26}}</string>
 										<reference key="NSSuperview" ref="164144974"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
+										<reference key="NSNextKeyView" ref="626705464"/>
 										<int key="NSViewLayerContentsRedrawPolicy">2</int>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="561934016">
@@ -571,7 +593,7 @@
 								<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							</object>
 						</array>
-						<string key="NSFrame">{{17, 8}, {487, 532}}</string>
+						<string key="NSFrame">{{17, 46}, {487, 532}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="164144974"/>
@@ -593,22 +615,19 @@
 						<int key="NSBoxType">0</int>
 						<int key="NSTitlePosition">0</int>
 						<bool key="NSTransparent">NO</bool>
-						<object class="NSColor" key="NSBorderColor2">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MAA</bytes>
-						</object>
+						<reference key="NSBorderColor2" ref="300502808"/>
 						<object class="NSColor" key="NSFillColor2">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MSAwLjM0OTAxOTYwNzggMC42NDcwNTg4MjM1AA</bytes>
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{521, 558}</string>
+				<string key="NSFrameSize">{521, 596}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="506001647"/>
 				<int key="NSViewLayerContentsRedrawPolicy">2</int>
-				<string key="NSClassName">NSView</string>
+				<string key="NSClassName">CBClipboardView</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -732,6 +751,7 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="1005"/>
 						<array class="NSMutableArray" key="children">
+							<reference ref="626705464"/>
 							<reference ref="506001647"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -890,32 +910,6 @@
 						<reference key="parent" ref="966235589"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">35</int>
-						<reference key="object" ref="879027932"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="561934016"/>
-						</array>
-						<reference key="parent" ref="506001647"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="561934016"/>
-						<reference key="parent" ref="879027932"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">37</int>
-						<reference key="object" ref="239361169"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="155022475"/>
-						</array>
-						<reference key="parent" ref="506001647"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">38</int>
-						<reference key="object" ref="155022475"/>
-						<reference key="parent" ref="239361169"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">43</int>
 						<reference key="object" ref="822997693"/>
 						<array class="NSMutableArray" key="children">
@@ -967,6 +961,45 @@
 						<reference key="object" ref="1013691595"/>
 						<reference key="parent" ref="251148524"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">63</int>
+						<reference key="object" ref="626705464"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="467315624"/>
+						</array>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">64</int>
+						<reference key="object" ref="467315624"/>
+						<reference key="parent" ref="626705464"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">35</int>
+						<reference key="object" ref="879027932"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="561934016"/>
+						</array>
+						<reference key="parent" ref="506001647"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="561934016"/>
+						<reference key="parent" ref="879027932"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="239361169"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="155022475"/>
+						</array>
+						<reference key="parent" ref="506001647"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">38</int>
+						<reference key="object" ref="155022475"/>
+						<reference key="parent" ref="239361169"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1009,22 +1042,24 @@
 				<reference key="60.IBViewIntegration.shadowColor" ref="300502808"/>
 				<real value="0.0" key="60.IBViewIntegration.shadowOffsetHeight"/>
 				<real value="0.0" key="60.IBViewIntegration.shadowOffsetWidth"/>
+				<string key="63.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">60</int>
+			<int key="maxID">65</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">CBDevicesController</string>
-					<string key="superclassName">NSViewController</string>
+					<string key="className">CBClipboardView</string>
+					<string key="superclassName">NSView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CBDevicesController.h</string>
+						<string key="minorKey">./Classes/CBClipboardView.h</string>
 					</object>
 				</object>
 			</array>
